# order-service

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
main_service/: .dockerignore  CLAUDE.md  Dockerfile  dependencies.py  deployment.yaml  docker-compose.yaml  kind_bin  requirements.txt  service.yaml
main_service/.github/workflows/: .gitlab-ci.yaml.yml
main_service/api/: consumer_test.py  main.py
main_service/core/: config.py
main_service/database/: connection.py  models.py  queries.py
main_service/docker/: Dockerfile
main_service/docs/: db_architecture.md  docker-basics.md  k8s_deployment.md  k8s_guide.md  learnig-env.md  message_queue_architecture.md  microservice_architecture.md  scalable_architecture.md  system_design.md  testing-strategy.md  web_deep.md
main_service/frontend/: form-login.html
main_service/k8s/: deployment.yaml  service.yaml
main_service/migration/: env.py
main_service/models/: exeptions.py  order.py  payment.py  product.py  user.py
main_service/rest/: main_views.py
main_service/services/: __init__.py  ai_service.py  async_service.py  cache_service.py  exchange_client.py  external_api_service.py  log_mongo_service.py  log_service.py  queue_consumer.py  queue_producer.py  tasky_services.py
main_service/templates/: admin.html  admin_old.html
main_service/testing/: test_api.py  test_models.py  test_utils.py
main_service/tests_test/: test_test.py
main_service/utils/: calculate_discount.py  calculations.py  order_processor.py  tasks.py  test_prois.py  validators.py
(+7 files in other folders)
