[project]
name = "sfmshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.135.1",
    "pandas>=3.0.1",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "redis>=7.3.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.48",
]
